# folding-benchmark

./: Makefile  README.md
benchmark_results/: halo2lib_minroot_protostar_bctv.md  halo2lib_minroot_protostar_cyclefold.md  nova_benchmark_results.md  nova_hashchain.md  nova_minroot.md  nova_scalar_mul.md  sonobe_nova_minroot.md
nova/: Cargo.toml
nova/benches/: hashchain.rs  minroot.rs  scalar_mul.rs  smchain.rs
nova/src/: hashchain.rs  lib.rs  main.rs  minroot.rs  scalar_mul.rs
protostar/: Cargo.toml
protostar/custom_cyclefold/: Cargo.toml
protostar/custom_cyclefold/benches/: hashchain.rs  minroot.rs  smchain.rs
protostar/halo2lib_bctv/: Cargo.toml
protostar/halo2lib_bctv/benches/: minroot.rs
protostar/halo2lib_cyclefold/: .gitignore  Cargo.toml
protostar/halo2lib_cyclefold/benches/: minroot.rs
sonobe/: .gitignore  Cargo.toml
sonobe/benches/: minroot.rs
sonobe/src/: lib.rs  minroot.rs  utils.rs
