[package]
name = "nova"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
nova-snark = { git = "https://github.com/amit0365/nova.git" }
bellpepper-core = { version="0.4.0", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }
neptune = { version = "13.0.0", default-features = false }
generic-array = "1.0.0"
flate2 = "1.0"
num-bigint = "0.4.3"
bincode = "1.3.3"
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"
halo2curves = "0.6.0"

[[bench]]
name = "minroot"
harness = false 

[[bench]]
name = "hashchain"
harness = false 

[[bench]]
name = "smchain"
harness = false 